--- a/index.html
+++ b/index.html
@@ -1,2 +1,35 @@
-<html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi Página Web</title>
+</head>
+<body>
+    <header>
+        <h1>Bienvenidos a Mi Página Web</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#home">Inicio</a></li>
+            <li><a href="#about">Sobre Mí</a></li>
+            <li><a href="#contact">Contacto</a></li>
+        </ul>
+    </nav>
+    <section id="home">
+        <h2>Inicio</h2>
+        <p>Esta es la página de inicio.</p>
+    </section>
+    <section id="about">
+        <h2>Sobre Mí</h2>
+        <p>Información sobre mí.</p>
+    </section>
+    <section id="contact">
+        <h2>Contacto</h2>
+        <p>Información de contacto.</p>
+    </section>
+    <footer>
+        <p>&copy; 2024 Mi Página Web</p>
+    </footer>
+</body>
+</html>
   
