--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         <h2>Inicio</h2>
         <p>Esta es la página de inicio.</p>
     </section>
+    <section id="home">
+        <h2>Segunda Parte</h2>
+        <p>esta seria una pagina de pruebas desde un colaborador</p>
+    </section>
     <section id="about">
         <h2>Sobre Mí</h2>
         <p>Información sobre mí.</p>
