--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h2>Inicio</h2>
         <p>Esta es la página de inicio.</p>
     </section>
-    <img src="imagenes/test.jpg" alt="Descripción de la imagen">
+    <img src="imagenes/fondo01.jpg" alt="Imagen de prueba">
     <section id="home">
         <h2>Segunda Parte</h2>
         <p>esta seria una pagina de pruebas desde un colaborador</p>
