--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
         <h2>Sobre Mí</h2>
         <p>Información sobre mí.</p>
     </section>
+    <section id="about">
+        <h2>estas es una pruebas desde la PC de Noemi</h2>
+        <p>este es un parrafo para una pruebas mas</p>
+    </section>
     <section id="contact">
         <h2>Contacto</h2>
         <p>Información de contacto.</p>
